<resources>
    <string name="app_name">GO SOPT Android</string>
    <string name="welcome_to_go_android">Welcome to Go Android!</string>
    <string name="id">ID</string>
    <string name="input_id_hint">아이디를 입력하세요.</string>
    <string name="pw">PW</string>
    <string name="input_pw_hint">비밀번호를 입력하세요.</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGNUP</string>
    <string name="setID">ID</string>
    <string name="name_hint">이름을 입력하세요</string>
    <string name="hobby_hint">특기를 입력하세요</string>
    <string name="sign_up_complete">회원가입 완료</string>
    <string name="profile">기본정보</string>
    <string name="log_in_success_message">로그인 성공</string>
    <string name="log_in_fail_message">로그인 실패</string>
    <string name="sign_up_success_message">회원가입이 완료되었습니다</string>
    <string name="sign_up_fail_message">회원가입에 실패하였습니다</string>
    <string name="btn_signIn">회원가입</string>
    <string name="id_need">아이디는 6~10 사이로 입력해주세요</string>
    <string name="pw_need">비밀번호는 8~1 사이로 입력해주세요</string>
    <string name="ui_state_false">오류 발생</string>
    <string name="sign_up_id_error_msg">아이디는 영문 숫자 6~10 자 이내</string>
    <string name="sign_up_pw_error_msg">비밀번호는 특수문자 영어 포함 8~10자 이내</string>
</resources>